@@ -11,6 +11,7 @@ procps-ng-NEXT
   * pgrep: warn about 15+ char name only if -f not used
   * pkill: Return 0 only if we can kill process            Debian #852758
   * top: show fewer memory decimal places (configurable)
+  * top: provide command line switch for memory scaling
 
 procps-ng-3.3.12
 ----------------
